Add emails for manual matches

--- a/app/views/manual_match_mailer/match_ur_nominee.html.erb
+++ b/app/views/manual_match_mailer/match_ur_nominee.html.erb
@@ -6,15 +6,15 @@
   <body>
     <h1>Hi <%= @nominee.email %></h1>
     <p>
-      <a href=<%= @url_matcher %>><%= @matcher.account.display_name %></a> tought
-      you may may be interested in the following <a href=<%= @url_resource %>>
+      <a href="<%= @url_matcher %>"><%= @matcher.account.display_name %></a> tought
+      you may may be interested in the following <a href="<%= @url_resource %>">
       resource</a>.
       We suggest you take a look at it, and confirm the match if you will arrive
       at the conclusion that it is useful for you.
     </p>
 
     <p>
-      Have a friendly day!
+      Have a resourceful day!
     </p>
   </body>
 </html>
