--- a/app/views/priority_mailer/notify_owner.html.erb
+++ b/app/views/priority_mailer/notify_owner.html.erb
@@ -7,10 +7,10 @@
     <h1>Hello, <%= @owner.account.display_name %></h1>
     <p>
         We'd like to inform you everyone you have chosen to annouce in particular
-      about  the  <a href="<%= @url %>"> <%= @object.class.to_s.downcase %></a> was notified by email.
-      Thus,it will go public in about 3 hours.
+      about  the  <a href="<%= @url %>"> <%= @object.class.to_s.downcase %></a> was
+      notified by email.Thus,it will go public in about <%= @last_lvl_time %> hour(s).
 
-      If you will find other people you'd like to annouce, you can reprioritize either
+      If there are other people you'd like to annouce, you can reprioritize either
       now or after the <%= @object.class.to_s.downcase %> goes public, in which case it will
       become private again.
     </p>
